# fraud_finder

./: .gitignore  LICENSE  README.md  pyproject.toml
src/waste-finder/: __init__.py  csv_analyzer.py  filter_contracts.py  grok3_chat.py  llm_analyzer.py  llm_chat.py  prompt.py  transform_data.py
src/waste-finder/analysis/: __init__.py  csv_analyzer.py  json_analyzer.py
src/waste-finder/core/: __init__.py  base_llm.py  keyword.py  prompt.py
src/waste-finder/data/: __init__.py  download_contracts.py  filter_contracts.py  transform_data.py
src/waste-finder/interaction/: __init__.py  llm_chat.py  twitter_poster.py
src/waste-finder/orchestration/: __init__.py  fraud_poster.py  orchestrator.py
src/windsurf_project/: __init__.py  download_contracts.py  filter_contracts.py  grok3_chat.py  llm_analyzer.py  orchestrator.py  promt.py  transform_data.py
